--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ wavelink = "^1.3.3"
 SpeechRecognition = "^3.10.0"
 py-trans = "^0.6.1"
 aiofiles = "^24.1.0"
+beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.dev-dependencies]
 
