--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,10 @@ aiofiles = "^24.1.0"
 beautifulsoup4 = "^4.12.3"
 aioconsole = "^0.8.1"
 climage = "^0.2.2"
+audioop-lts = { version = "^0.2.1", markers = "python_version >= '3.13'" }
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+pyinstaller = "^6.12.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
